Fix home page app icon alignment

--- a/src/Home/Home/styles.scss
+++ b/src/Home/Home/styles.scss
@@ -21,6 +21,7 @@
           display: block;
           padding: 30px;
           max-width: 90%;
+          margin: 0 auto;
         }
       }
 
